--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,8 +1,5 @@
-* {
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
+@import "reset.css";
 
-body {
-    font-family: 'Roboto', sans-serif;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
