docs: configure postcss and set some minimal styles/layout

--- a/docs/_includes/partials/_navigation.njk
+++ b/docs/_includes/partials/_navigation.njk
@@ -1,3 +1,13 @@
-<nav>
-    <a href="/">Home</a>
-</nav>
+<header>
+    <nav>
+        <ul class="flex items-center gap-2">
+            {%- for item in collections.page -%}
+            <li class="flex items-center">
+                <a class="btn" href="{{ item.url }}">
+                    {{ item.data.title }}
+                </a>
+            </li>
+            {%- endfor -%}
+        </ul>
+    </nav>
+</header>
