--- a/docs/assets/css/main.css
+++ b/docs/assets/css/main.css
@@ -1,5 +1,31 @@
-@import "reset.css";
+/*//////////////////////////////////////////////////////////////////////////////
+/////////// VARIABLES
+//////////////////////////////////////////////////////////////////////////////*/
 
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "variables.css";
+
+/*//////////////////////////////////////////////////////////////////////////////
+/////////// BASE STYLES
+//////////////////////////////////////////////////////////////////////////////*/
+
+@import "base.css";
+
+/*//////////////////////////////////////////////////////////////////////////////
+/////////// TAILWIND CSS
+//////////////////////////////////////////////////////////////////////////////*/
+
+@import "tailwindcss/base.css";
+@import "tailwindcss/components.css";
+@import "tailwindcss/utilities.css";
+
+/*//////////////////////////////////////////////////////////////////////////////
+/////////// UTILITY STYLES
+//////////////////////////////////////////////////////////////////////////////*/
+
+@import "utilitites.css";
+
+/*//////////////////////////////////////////////////////////////////////////////
+/////////// COMPONENT STYLES
+//////////////////////////////////////////////////////////////////////////////*/
+
+@import "components.css";
