--- a/docs/index.njk
+++ b/docs/index.njk
@@ -1,8 +1,23 @@
 ---
 layout: base
 title: Home
+tags: page
+order: 1
 ---
 
-<h1 class="mt-4">
+<h1 class="heading-1 mx-auto mt-40">
     TypeScript AST Parser
 </h1>
+
+<p class="text text-lg text-center mx-auto mt-10">
+    Simplifies the TypeScript AST generated from the TypeScript compiler to help extract helpful metadata.
+
+    <br/>
+    <br/>
+
+    This metadata then can be used to generate documentation.
+</p>
+
+<a class="btn btn-lg btn-outlined mx-auto mt-10" href="/playground">
+    Playground
+</a>
