--- a/docs/index.njk
+++ b/docs/index.njk
@@ -18,6 +18,6 @@ order: 1
     This metadata then can be used to generate documentation.
 </p>
 
-<a class="btn btn-lg btn-outlined mx-auto mt-10" href="/playground">
+<a class="btn btn-lg btn-outlined mx-auto mt-10" href="{{ '/playground/' | url }}">
     Playground
 </a>
