--- a/docs/assets/css/base.css
+++ b/docs/assets/css/base.css
@@ -67,6 +67,7 @@ main {
     flex-direction: column;
     justify-content: flex-start;
     padding-block-start: var(--navbar-height);
+    padding-inline: theme("spacing.4");
     height: 100vh;
 
     &.module {
