--- a/docs/index.njk
+++ b/docs/index.njk
@@ -5,7 +5,7 @@ tags: page
 order: 1
 ---
 
-<h1 class="heading-1 mx-auto mt-40">
+<h1 class="heading-1 text-center mx-auto mt-12 md:mt-40">
     TypeScript AST Parser
 </h1>
 
