--- a/docs/_layouts/base.njk
+++ b/docs/_layouts/base.njk
@@ -1,35 +1,43 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
 
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width initial-scale=1.0">
-        <title>{{site.title}}{% if title %} | {{title}}{% endif %}</title>
-        <meta name="description" content="{% if description %}{{description}}{% else %}{{site.description}}{% endif %}"/>
-        <link href="favicon.ico" rel="icon" type="image/x-icon" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link
-            href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
-            rel="stylesheet"
-        />
-        <link rel="stylesheet" href="{{ "/assets/css/main.css" | url }}" />
-    </head>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width initial-scale=1.0">
+    <title>{{ site.title }}{% if title %} | {{ title }}{% endif %}</title>
+    <meta
+        name="description"
+        content="{% if description %}{{ description }}{% else %}{{ site.description }}{% endif %}"
+    />
+    <link href="favicon.ico" rel="icon" type="image/x-icon"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com"/>
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet"
+    />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <body>
-        {% include "partials/_navigation.njk" %}
+    <link rel="stylesheet" href="{{ '/assets/css/main.css' | url }}"/>
 
-        {% if sideBarCollection %}
-        {% include "partials/_side-bar.njk" %}
-        {% endif %}
+    <script async type="module" src="{{ '/assets/js/side-bar.js' | url }}"></script>
+    <script async type="module" src="{{ '/assets/js/playground.js' | url }}"></script>
+</head>
 
-        <main class="{% if sideBarCollection %}module{% else %}full-page{% endif %}">
-            {{content | safe}}
+<body>
+{% include "partials/_navigation.njk" %}
 
-            {% if sideBarCollection %}
-            {% include "partials/_pagination.njk" %}
-            {% endif %}
-        </main>
-    </body>
+{% if sideBarCollection %}
+    {% include "partials/_side-bar.njk" %}
+{% endif %}
+
+<main class="{% if sideBarCollection %}module{% else %}full-page{% endif %}">
+    {{ content | safe }}
+
+    {% if sideBarCollection %}
+        {% include "partials/_pagination.njk" %}
+    {% endif %}
+</main>
+</body>
 
 </html>
