--- a/docs/index.njk
+++ b/docs/index.njk
@@ -6,7 +6,7 @@ order: 1
 ---
 
 <h1 class="heading-1 text-center mx-auto mt-12 md:mt-40">
-    TypeScript AST Parser
+    {{ site.title }}
 </h1>
 
 <p class="text text-lg text-center mx-auto mt-10">
