--- a/docs/to-markdown/api-reference.njk
+++ b/docs/to-markdown/api-reference.njk
@@ -1,7 +1,7 @@
 ---
 layout: base
-title: Getting Started
+title: API Reference
 tags: toMarkdown
 sideBarCollection: toMarkdown
-order: 2
+order: 3
 ---
