--- a/docs/to-markdown/overview.njk
+++ b/docs/to-markdown/overview.njk
@@ -1,7 +1,7 @@
 ---
 layout: base
-title: Getting Started
+title: Overview
 tags: toMarkdown
 sideBarCollection: toMarkdown
-order: 2
+order: 1
 ---
