--- a/docs/core/api-reference.njk
+++ b/docs/core/api-reference.njk
@@ -3,5 +3,9 @@ layout: base
 title: API Reference
 tags: core
 sideBarCollection: core
-order: 3
+order: 2
 ---
+
+<h1 class="heading-2">
+    {{ title }}
+</h1>
