--- a/docs/assets/css/components.css
+++ b/docs/assets/css/components.css
@@ -110,8 +110,7 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding-block-start: var(--navbar-height);
-    padding-inline: theme("spacing.4");
+    padding: calc(var(--navbar-height) + theme("spacing.6")) theme("spacing.6") theme("spacing.6");
     width: 100%;
     height: 100vh;
 
@@ -119,6 +118,7 @@
         @screen md {
             width: auto;
             margin-inline-start: var(--sidebar-width);
+            padding: calc(var(--navbar-height) + theme("spacing.10")) theme("spacing.10") theme("spacing.10");
         }
     }
 
@@ -179,6 +179,10 @@
             border-top: 1px solid hsl(var(--color-border));
         }
 
+        &.active {
+            font-weight: bold;
+        }
+
         @media (hover: hover) and (pointer: fine) {
             &:hover {
                 background-color: hsl(var(--color-text) / 5%);
@@ -189,10 +193,55 @@
             transition: transform ease 300ms;
         }
 
+        a {
+            display: block;
+            width: 100%;
+        }
+
         details[open] {
             .material-icons {
                 transform: rotate(90deg);
             }
         }
+    }
+}
+
+/*//////////////////////////////////////////////////////////////////////////////
+/////////// PAGINATION
+//////////////////////////////////////////////////////////////////////////////*/
+
+.pagination {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: theme("spacing.2");
+    width: 100%;
+    margin-top: theme("spacing.4");
+
+    .pagination__next,
+    .pagination__previous {
+        display: flex;
+        align-items: center;
+        width: 50%;
+        padding: theme("spacing.4");
+        border: 1px solid hsl(var(--color-border));
+        border-radius: var(--border-radius);
+    }
+
+    .pagination__previous {
+        justify-content: flex-start;
+        margin-inline-end: auto;
+    }
+
+    .pagination__next {
+        justify-content: flex-end;
+        margin-inline-start: auto;
+    }
+
+    .pagination__label {
+        font-family: var(--font-sans);
+        font-weight: bold;
+        font-size: theme("fontSize.lg");
+        min-width: 0;
     }
 }
