--- a/docs/to-markdown/api-reference.njk
+++ b/docs/to-markdown/api-reference.njk
@@ -3,5 +3,9 @@ layout: base
 title: API Reference
 tags: toMarkdown
 sideBarCollection: toMarkdown
-order: 3
+order: 2
 ---
+
+<h1 class="heading-2">
+    {{ title }}
+</h1>
